plugins {
    id 'org.springframework.boot' version '2.7.15'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'groovy'
    id 'java-library'
    id 'maven-publish'
    id 'com.github.ben-manes.versions' version '0.48.0'
    id 'se.patrikerdes.use-latest-versions' version '0.2.18'
    id "org.openrewrite.rewrite" version '6.3.18'
}


group = 'no.fintlabs'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 17

repositories {
    mavenLocal()
    jcenter()
    maven {
        url 'https://repo.fintlabs.no/releases'
    }
}


dependencies {
    implementation 'no.fint:fint-model-resource:0.4.1'
    implementation 'no.fint:fint-relation-model:1.1.6'

    implementation 'com.github.springfox.loader:springfox-loader:1.3.0'
    implementation 'org.apache.commons:commons-text:1.3'

    implementation 'org.springframework.hateoas:spring-hateoas:0.24.0.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testImplementation 'cglib:cglib-nodep:3.2.5'
    testImplementation 'org.spockframework:spock-spring:1.1-groovy-2.4'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
}

bootJar {
    enabled = false
}

jar {
    enabled = true
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

test {
    useJUnitPlatform()
}

apply from: 'https://raw.githubusercontent.com/FINTLabs/fint-buildscripts/master/reposilite.ga.gradle'